Fixed some deprecation errors.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: scala
 
 scala:
-  - 2.11.8
+  - 2.11.12
   - 2.12.1
+  - 2.13.1
 
 jdk:
-  - oraclejdk8
+  - openjdk11
 
 sudo: false
 
